JM-80 [BE] Showroom CRUD (in progress)
update showroom CRUD tests and fix local mock auth flow
