# src/controllers/showroomController.js
@@ -1,35 +1,58 @@
-import { createShowroom } from "../services/showroomService.js";
+import {
+    createShowroom,
+    listShowroomsService,
+    getShowroomByIdService,
+    updateShowroomService,
+} from "../services/showroomService.js";
 import { ok } from "../utils/apiResponse.js";
 
+// CREATE
 export async function createShowroomController(req, res, next) {
     try {
-        const ownerUid = req.user.uid;
-        const data = req.body;
-
-        const showroom = await createShowroom(data, ownerUid);
-
+        const showroom = await createShowroom(req.body, req.user.uid);
         return ok(res, { showroom });
     } catch (err) {
         next(err);
     }
 }
 
+// LIST
 export async function listShowrooms(req, res, next) {
     try {
-        const db = getFirestoreInstance();
-        const snapshot = await db.collection("showrooms").get();
-        const showrooms = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-
+        const showrooms = await listShowroomsService(req.query, req.user ?? null);
         return ok(res, { showrooms });
     } catch (err) {
         next(err);
     }
 }
 
+// GET BY ID
+export async function getShowroomById(req, res, next) {
+    try {
+        const showroom = await getShowroomByIdService(
+            req.params.id,
+            req.user ?? null
+        );
+        return ok(res, { showroom });
+    } catch (err) {
+        next(err);
+    }
+}
+
+// FAVORITE (stub)
 export async function favoriteShowroom(req, res, next) {
     try {
-        // TODO: додати логіку фаворитів
-        return ok(res, { message: "Added to favorites", user: req.user });
+        return ok(res, { message: "Added to favorites (stub)" });
+    } catch (err) {
+        next(err);
+    }
+}
+
+// UPDATE
+export async function updateShowroom(req, res, next) {
+    try {
+        const showroom = await updateShowroomService(req.params.id, req.body, req.user);
+        return ok(res, { showroom });
     } catch (err) {
         next(err);
     }
