# src/routes/showrooms.js
@@ -3,10 +3,23 @@ import { authMiddleware } from "../middlewares/auth.js";
 import { loadUser } from "../middlewares/loadUser.js";
 import { requireRole } from "../middlewares/role.js";
 import { ROLES } from "../constants/roles.js";
-import { listShowrooms, favoriteShowroom, createShowroomController } from "../controllers/showroomController.js";
+import {
+    listShowrooms,
+    createShowroomController,
+    getShowroomById,
+    favoriteShowroom,
+    updateShowroom,
+} from "../controllers/showroomController.js";
 
 const router = Router();
 
+// LIST
+router.get("/", listShowrooms);
+
+// GET BY ID
+router.get("/:id", loadUser, getShowroomById);
+
+// CREATE
 router.post(
     "/create",
     authMiddleware,
@@ -15,8 +28,16 @@ router.post(
     createShowroomController
 );
 
-router.get("/", listShowrooms); // public
+// UPDATE
+router.patch(
+    "/:id",
+    authMiddleware,
+    loadUser,
+    requireRole([ROLES.OWNER]),
+    updateShowroom
+);
 
+// FAVORITE (stub)
 router.post(
     "/:id/favorite",
     authMiddleware,
